refactor: violacion regla1 - retornar lista vacia en lugar de null y mejoras de Rule 11